--- a/MngrPaycheck.Logics/MngrPaycheck.Logics.csproj
+++ b/MngrPaycheck.Logics/MngrPaycheck.Logics.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>MngrPaycheck.Logics</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>92d8383f</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,7 +56,6 @@
     <Compile Include="Strategy\Concrete\PaymentTypeStrategy.cs" />
     <Compile Include="Strategy\Concrete\ProductTypeStrategy.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\MngrPaycheck.Common\MngrPaycheck.Common.csproj">
       <Project>{7E0E4BEA-94CC-45EC-8FB8-E57203B933B2}</Project>
@@ -69,6 +69,9 @@
       <Project>{3FEAC9D1-FD99-4B63-9B35-0F04B6BA70D8}</Project>
       <Name>MngrPaycheck.Entity</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
