--- a/MngrPaycheck/MngrPaycheck.csproj
+++ b/MngrPaycheck/MngrPaycheck.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Nortal.Utilities.AssemblyVersioning.MsBuildTask.0.11.0\build\Nortal.Utilities.AssemblyVersioning.MsBuildTask.props" Condition="Exists('..\packages\Nortal.Utilities.AssemblyVersioning.MsBuildTask.0.11.0\build\Nortal.Utilities.AssemblyVersioning.MsBuildTask.props')" />
   <Import Project="..\packages\StyleCopPlus.MSBuild.4.7.49.5\build\StyleCopPlus.MSBuild.props" Condition="Exists('..\packages\StyleCopPlus.MSBuild.4.7.49.5\build\StyleCopPlus.MSBuild.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -16,6 +17,7 @@
     <WarningLevel>4</WarningLevel>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <NuGetPackageImportStamp>1bdefde9</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -103,6 +105,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\Nortal.Utilities.AssemblyVersioning.MsBuildTask.props" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -141,7 +144,10 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Nortal.Utilities.AssemblyVersioning.MsBuildTask.0.11.0\build\Nortal.Utilities.AssemblyVersioning.MsBuildTask.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Nortal.Utilities.AssemblyVersioning.MsBuildTask.0.11.0\build\Nortal.Utilities.AssemblyVersioning.MsBuildTask.props'))" />
+    <Error Condition="!Exists('..\packages\Nortal.Utilities.AssemblyVersioning.MsBuildTask.0.11.0\build\Nortal.Utilities.AssemblyVersioning.MsBuildTask.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Nortal.Utilities.AssemblyVersioning.MsBuildTask.0.11.0\build\Nortal.Utilities.AssemblyVersioning.MsBuildTask.targets'))" />
   </Target>
+  <Import Project="..\packages\Nortal.Utilities.AssemblyVersioning.MsBuildTask.0.11.0\build\Nortal.Utilities.AssemblyVersioning.MsBuildTask.targets" Condition="Exists('..\packages\Nortal.Utilities.AssemblyVersioning.MsBuildTask.0.11.0\build\Nortal.Utilities.AssemblyVersioning.MsBuildTask.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
