--- a/MngrPaycheck.DAL/MngrPaycheck.DAL.csproj
+++ b/MngrPaycheck.DAL/MngrPaycheck.DAL.csproj
@@ -51,8 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Context\MngPaycheckContext.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Abstract\GenericRepository.cs" />
     <Compile Include="Repositories\ProductParametrRepository.cs" />
     <Compile Include="Repositories\ProductParametrValueRepository.cs" />
