--- a/MngrPaycheck.Entity/MngrPaycheck.Entity.csproj
+++ b/MngrPaycheck.Entity/MngrPaycheck.Entity.csproj
@@ -52,13 +52,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Cashier.cs" />
     <Compile Include="PaymentType.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductParametr.cs" />
     <Compile Include="ProductParametrValue.cs" />
     <Compile Include="ProductType.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Purchase.cs" />
     <Compile Include="Supermarket.cs" />
   </ItemGroup>
