--- a/MngrPaycheck.Tests/MngrPaycheck.Tests.csproj
+++ b/MngrPaycheck.Tests/MngrPaycheck.Tests.csproj
@@ -62,8 +62,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="UnitTest1.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DAL\" />
