--- a/MngrPaycheck/App.config
+++ b/MngrPaycheck/App.config
@@ -13,4 +13,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IProductService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:16550/ProductService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService"
+        contract="ProductServiceReference.IProductService" name="BasicHttpBinding_IProductService" />
+    </client>
+  </system.serviceModel>
 </configuration>
