--- a/MngrPaycheck/MngrPaycheck.csproj
+++ b/MngrPaycheck/MngrPaycheck.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -79,6 +81,11 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Service References\ProductServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -112,6 +119,19 @@
     </None>
     <AppDesigner Include="Properties\" />
     <None Include="Rules.ruleset" />
+    <None Include="Service References\ProductServiceReference\MngrPaycheck.ProductServiceReference.ProductRepository.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\ProductServiceReference\ProductService.wsdl" />
+    <None Include="Service References\ProductServiceReference\ProductService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ProductServiceReference\ProductService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ProductServiceReference\ProductService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -136,6 +156,45 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="View\Pictures\Search.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ProductServiceReference\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ProductServiceReference\ProductService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ProductServiceReference\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ProductServiceReference\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ProductServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MngrPaycheck.Common\MngrPaycheck.Common.csproj">
+      <Project>{7E0E4BEA-94CC-45EC-8FB8-E57203B933B2}</Project>
+      <Name>MngrPaycheck.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MngrPaycheck.DAL\MngrPaycheck.DAL.csproj">
+      <Project>{81E08870-6071-4E68-8B12-5B295BC7FFAF}</Project>
+      <Name>MngrPaycheck.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MngrPaycheck.Entity\MngrPaycheck.Entity.csproj">
+      <Project>{3FEAC9D1-FD99-4B63-9B35-0F04B6BA70D8}</Project>
+      <Name>MngrPaycheck.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Product.WcfService\Product.WcfService.csproj">
+      <Project>{E5F843CB-3ECD-4B71-9B79-25C80557DE1D}</Project>
+      <Name>Product.WcfService</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
