Added pattern Memento to project
also added test for Memento

--- a/MngrPaycheck.Logics/MngrPaycheck.Logics.csproj
+++ b/MngrPaycheck.Logics/MngrPaycheck.Logics.csproj
@@ -58,6 +58,9 @@
     <Compile Include="Strategy\Abstract\BaseStrategy.cs" />
     <Compile Include="Strategy\Concrete\PaymentTypeStrategy.cs" />
     <Compile Include="Strategy\Concrete\ProductTypeStrategy.cs" />
+    <Compile Include="WorkingPurchases\PurchasesHistory.cs" />
+    <Compile Include="WorkingPurchases\Memento.cs" />
+    <Compile Include="WorkingPurchases\PurchaseOffice.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MngrPaycheck.Common\MngrPaycheck.Common.csproj">
@@ -75,6 +78,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Rights-teller\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
