Added client-server (ProductService-User) communication
Added:
- Namely ProductService with User
- Client and server communicate via json
- Added wrapper for ProductService
- Added ServiceLogics for User
- Added View to display Products
- Added VM for View to display Products

--- a/MngrPaycheck/App.config
+++ b/MngrPaycheck/App.config
@@ -16,13 +16,13 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IProductService" />
+        <binding name="BasicHttpBinding_IService1" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:16550/ProductService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService"
-        contract="ProductServiceReference.IProductService" name="BasicHttpBinding_IProductService" />
+      <endpoint address="http://localhost:37948/Service.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IService1" contract="ProductServiceReference.IService1"
+        name="BasicHttpBinding_IService1" />
     </client>
   </system.serviceModel>
 </configuration>
