Fix troubles Client-Server (ProductService-User) communication
Rename Service to ProductRepositoryService

--- a/ProductService/ProductService.csproj
+++ b/ProductService/ProductService.csproj
@@ -72,17 +72,16 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Service.svc" />
+    <Content Include="ProductRepositoryService.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Employee.cs" />
-    <Compile Include="Service.svc.cs">
-      <DependentUpon>Service.svc</DependentUpon>
+    <Compile Include="ProductRepositoryService.svc.cs">
+      <DependentUpon>ProductRepositoryService.svc</DependentUpon>
     </Compile>
-    <Compile Include="IService1.cs" />
+    <Compile Include="IProductRepositoryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WrapperProduct.cs" />
   </ItemGroup>
