--- a/MngrPaycheck/App.config
+++ b/MngrPaycheck/App.config
@@ -16,13 +16,14 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IService1" />
+        <binding name="BasicHttpBinding_IProductRepositoryService" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:37948/Service.svc" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_IService1" contract="ProductServiceReference.IService1"
-        name="BasicHttpBinding_IService1" />
+      <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService"
+        contract="ProductServiceReference.IProductRepositoryService"
+        name="BasicHttpBinding_IProductRepositoryService" />
     </client>
   </system.serviceModel>
 </configuration>
