--- a/MngrPaycheck/MngrPaycheck.csproj
+++ b/MngrPaycheck/MngrPaycheck.csproj
@@ -93,6 +93,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Services Logics\ProductSeviceLogics.cs" />
+    <Compile Include="Services Logics\WrapperProductUser.cs" />
     <Compile Include="ViewModel\MainWindowVM.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -128,11 +129,11 @@
     </None>
     <AppDesigner Include="Properties\" />
     <None Include="Rules.ruleset" />
-    <None Include="Service References\ProductServiceReference\Service.xsd">
+    <None Include="Service References\ProductServiceReference\ProductRepositoryService.wsdl" />
+    <None Include="Service References\ProductServiceReference\ProductRepositoryService.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ProductServiceReference\Service1.wsdl" />
-    <None Include="Service References\ProductServiceReference\Service2.xsd">
+    <None Include="Service References\ProductServiceReference\ProductRepositoryService1.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -163,28 +164,16 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MngrPaycheck.Common\MngrPaycheck.Common.csproj">
-      <Project>{7E0E4BEA-94CC-45EC-8FB8-E57203B933B2}</Project>
-      <Name>MngrPaycheck.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MngrPaycheck.DAL\MngrPaycheck.DAL.csproj">
-      <Project>{81E08870-6071-4E68-8B12-5B295BC7FFAF}</Project>
-      <Name>MngrPaycheck.DAL</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MngrPaycheck.Entity\MngrPaycheck.Entity.csproj">
       <Project>{3FEAC9D1-FD99-4B63-9B35-0F04B6BA70D8}</Project>
       <Name>MngrPaycheck.Entity</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ProductService\ProductService.csproj">
-      <Project>{D557C6AB-C89F-47C6-9098-3A3357D6C277}</Project>
-      <Name>ProductService</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\ProductServiceReference\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\ProductServiceReference\Service.disco" />
+    <None Include="Service References\ProductServiceReference\ProductRepositoryService.disco" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\ProductServiceReference\configuration91.svcinfo" />
