--- a/MngrPaycheck.Entity/MngrPaycheck.Entity.csproj
+++ b/MngrPaycheck.Entity/MngrPaycheck.Entity.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ProductParametr.cs" />
     <Compile Include="ProductParametrValue.cs" />
     <Compile Include="ProductType.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Purchase.cs" />
     <Compile Include="Supermarket.cs" />
   </ItemGroup>
