Added new service (ProductTypeService), new view(AddType in Administrator), and added interaction with ProductTypeService
Added:
- new service (ProductTypeService ), also added to services command add
- new View (AddType in Administrator)
- interaction with ProductTypeService and View (AddType in
Administrator)

--- a/MngrPaycheck.Administrator/App.config
+++ b/MngrPaycheck.Administrator/App.config
@@ -7,12 +7,17 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IProductRepositoryService" />
+                <binding name="BasicHttpBinding_IProductTypeRepositoryService" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService"
                 contract="ProductServiceRef.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService" />
+            <endpoint address="http://localhost:3595/ProductTypeRepositoryService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductTypeRepositoryService"
+                contract="ProductTypeServiceRef.IProductTypeRepositoryService"
+                name="BasicHttpBinding_IProductTypeRepositoryService" />
         </client>
     </system.serviceModel>
 </configuration>
