--- a/MngrPaycheck.Administrator/App.config
+++ b/MngrPaycheck.Administrator/App.config
@@ -1,5 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
@@ -8,16 +9,13 @@
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IProductRepositoryService" />
                 <binding name="BasicHttpBinding_IProductTypeRepositoryService" />
+                <binding name="BasicHttpBinding_IProductParameterRepositoryService" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService"
-                contract="ProductServiceRef.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService" />
-            <endpoint address="http://localhost:3595/ProductTypeRepositoryService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductTypeRepositoryService"
-                contract="ProductTypeServiceRef.IProductTypeRepositoryService"
-                name="BasicHttpBinding_IProductTypeRepositoryService" />
+            <endpoint address="http://localhost:37948/ProductRepositoryService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService" contract="ProductServiceRef.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService" />
+            <endpoint address="http://localhost:3595/ProductTypeRepositoryService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductTypeRepositoryService" contract="ProductTypeServiceRef.IProductTypeRepositoryService" name="BasicHttpBinding_IProductTypeRepositoryService" />
+            <endpoint address="http://localhost:23010/ProductParameterRepositoryService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductParameterRepositoryService" contract="ProductParametrServiceRef.IProductParameterRepositoryService" name="BasicHttpBinding_IProductParameterRepositoryService" />
         </client>
     </system.serviceModel>
 </configuration>
